--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,5 @@
 platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
-lib_deps = ropg/Heltec_ESP32_LoRa_v3@^0.9.1
+lib_deps= HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays
 monitor_speed = 115200
