--- a/platformio.ini
+++ b/platformio.ini
@@ -8,9 +8,17 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:heltec_wifi_lora_32_V3]
+[env]
 platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
 lib_deps= HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays
 monitor_speed = 115200
+
+[env:primary]
+build_flags = 
+    -D PRIMARY=1
+
+[env:secondary]
+build_flags = 
+    -D PRIMARY=0
