adding protobuf support

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,13 +12,15 @@
 platform = espressif32
 board = heltec_wifi_lora_32_V3
 framework = arduino
-lib_deps= HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays
+lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 monitor_speed = 115200
 
 [env:primary]
 build_flags = 
-    -D PRIMARY=1
+	-D PRIMARY=1
+lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 
 [env:secondary]
 build_flags = 
-    -D PRIMARY=0
+	-D PRIMARY=0
+lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
