--- a/platformio.ini
+++ b/platformio.ini
@@ -15,12 +15,30 @@ framework = arduino
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 monitor_speed = 115200
 
-[env:primary]
+[env:ford-primary]
 build_flags = 
 	-D PRIMARY=1
+	-D CONFIG_SSID=\"funkbox-ford-\"
+	-D CONFIG_PWD=\"funkbox-ford-pwd\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 
-[env:secondary]
+[env:ford-secondary]
 build_flags = 
 	-D PRIMARY=0
+	-D CONFIG_SSID=\"funkbox-ford-\"
+	-D CONFIG_PWD=\"funkbox-ford-pwd\"
+lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
+
+[env:vectra-primary]
+build_flags = 
+	-D PRIMARY=1
+	-D CONFIG_SSID=\"funkbox-vectra-\"
+	-D CONFIG_PWD=\"funkbox-vectra-pwd\"
+lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
+
+[env:vectra-secondary]
+build_flags = 
+	-D PRIMARY=0
+	-D CONFIG_SSID=\"funkbox-vectra-\"
+	-D CONFIG_PWD=\"funkbox-vectra-pwd\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
