fixing password management for sender

--- a/platformio.ini
+++ b/platformio.ini
@@ -19,26 +19,26 @@ monitor_speed = 115200
 build_flags = 
 	-D PRIMARY=1
 	-D CONFIG_SSID=\"funkbox-ford-\"
-	-D CONFIG_PWD=\"funkbox-ford-pwd\"
+	-D CONFIG_PWD=\"funkbox-ford-pwd-\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 
 [env:ford-secondary]
 build_flags = 
 	-D PRIMARY=0
 	-D CONFIG_SSID=\"funkbox-ford-\"
-	-D CONFIG_PWD=\"funkbox-ford-pwd\"
+	-D CONFIG_PWD=\"funkbox-ford-pwd-\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 
 [env:vectra-primary]
 build_flags = 
 	-D PRIMARY=1
 	-D CONFIG_SSID=\"funkbox-vectra-\"
-	-D CONFIG_PWD=\"funkbox-vectra-pwd\"
+	-D CONFIG_PWD=\"funkbox-vectra-pwd-\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
 
 [env:vectra-secondary]
 build_flags = 
 	-D PRIMARY=0
 	-D CONFIG_SSID=\"funkbox-vectra-\"
-	-D CONFIG_PWD=\"funkbox-vectra-pwd\"
+	-D CONFIG_PWD=\"funkbox-vectra-pwd-\"
 lib_deps = HotButton, RadioLib, ESP8266 and ESP32 OLED driver for SSD1306 displays, nanopb/Nanopb@^0.4.8
